# teabase

./: .teabase_bench-0.1.tm.swp  Makefile  Makefile.in  __builddir.in  __srcdir.in  dbench.tcl  dbuild.tcl  defer.h  dtest.tcl  getbytes.h  instance_tracking.c  instance_tracking.h  meson.build  names.c  names.h  polyfill.h  register_config.c  register_config.h  run_bench.tcl  tclstuff.h  teabase.m4  teabase_bench-0.1.tm  termdebug.vim.in  tip445.h
init/: meson.build
pkg_config_h/: meson.build
subprojects/: brotli.wrap  chantricks.wrap  dedup.wrap  gc_class.wrap  parse_args.wrap  reuri.wrap  rl_http.wrap  rl_json.wrap  tcl-s2n.wrap  tcl.wrap  tcllib.wrap  tdom.wrap  thread.wrap  tomcrypt.wrap  type.wrap
subprojects/packagefiles/libtommath/: meson.build  meson_options.txt
subprojects/packagefiles/tcl/: meson.build  tcl.pc.in  tclUuid.h.in
subprojects/packagefiles/tcllib/: meson.build  pkgIndex.tcl
subprojects/packagefiles/thread/: meson.build  thread.pc.in  threadUuid.h.in
tools/: check_ver.tcl  genStubs.tcl  interned_deps.py  make_termdebug_arg.tcl  runtests.tcl  test_preamble.tcl
